# f18-llvm-project

clang/lib/CodeGen/: CGStmtOpenMP.cpp
clang/lib/Driver/: Driver.cpp
clang/lib/Sema/: SemaOpenMP.cpp
flang/: CMakeLists.txt  README.md
flang/cmake/modules/: AddFlang.cmake
flang/docs/: FIRArrayOperations.md
flang/docs/tutorials/: addingIntrinsics.md
flang/lib/: CMakeLists.txt
flang/lib/Decimal/: binary-to-decimal.cpp
flang/lib/Evaluate/: CMakeLists.txt  expression.cpp  fold-implementation.h  fold-integer.cpp  fold-real.cpp  fold-reduction.h  intrinsics-library.cpp  intrinsics.cpp  shape.cpp  tools.cpp  type.cpp
flang/lib/Frontend/: CMakeLists.txt  CompilerInvocation.cpp  FrontendAction.cpp  FrontendActions.cpp
flang/lib/FrontendTool/: ExecuteCompilerInvocation.cpp
flang/lib/Lower/: Allocatable.cpp  BoxAnalyzer.h  Bridge.cpp  CMakeLists.txt  (+33 more)
flang/module/: __fortran_builtins.f90
flang/runtime/: CMakeLists.txt  buffer.h  character.cpp  descriptor.cpp  descriptor.h  file.cpp  format-implementation.h  instrument.cpp  internal-unit.cpp  io-api.cpp  io-api.h  io-error.cpp  io-stmt.cpp  iostat.cpp  main.cpp  memory.cpp  namelist.cpp  numeric.cpp  ragged.cpp  reduction.h  stat.cpp  stop.cpp  stop.h  time-intrinsic.cpp  transformational.cpp  type-info.cpp  type-info.h  unit.cpp
flang/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
flang/tools/: CMakeLists.txt
flang/tools/bbc/: CMakeLists.txt  bbc.cpp
flang/tools/tco/: CMakeLists.txt  tco.cpp
flang/unittests/: CMakeLists.txt
mlir/docs/: Interfaces.md
mlir/utils/: generate-test-checks.py
(+521 files in other folders)
